--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,8 @@ services:
       NODE_ENV: production
       DB_USER: postgres
       DB_PASSWORD: postgres
+      DB_HOST: postgres
+      DB_PORT: 5432
 
     depends_on:
       - postgres
@@ -27,7 +29,6 @@ services:
     ports:
       - 5422:5432
     volumes:
-      #   # - './var/lib/postgresql/data'
       - 'backendtest-db:/var/lib/postgresql/data'
   redis:
     container_name: redis-cache
