--- a/tsconfig.json
+++ b/tsconfig.json
@@ -103,5 +103,6 @@
     /* Completeness */
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
     "skipLibCheck": false /* Skip type checking all .d.ts files. */
-  }
+  },
+  "exclude": ["test", "jest.config.js"]
 }
