--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
+    "mysql": "^2.18.1",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.10",
     "ts-node": "^10.7.0",
